--- a/Code/cleaning.ipynb
+++ b/Code/cleaning.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,13 +75,16 @@
     "    files = os.listdir(dir)\n",
     "\n",
     "    # filter files by .csv bec some are google sheets\n",
-    "    csv_files = [file for file in files if file.endswith('.csv')]\n",
+    "    # extract the number of the month, then sort by month so that they are then stored in order of month\n",
+    "    csv_files = sorted([int(file[4:6]) for file in files if file.endswith('.csv')])\n",
     "    \n",
     "    for csv_file in csv_files:\n",
-    "        f = os.path.join(dir, csv_file)\n",
-    "\n",
-    "        # extract month name\n",
-    "        month = calendar.month_name[int(csv_file[4:6])]\n",
+    "        # reconstruct the name of file bec we extracted the month number to sort them by month\n",
+    "        reconstructed_name = '2023'+str(csv_file)+'-divvy-tripdata.csv' if csv_file >= 10 else '20230'+str(csv_file)+'-divvy-tripdata.csv'\n",
+    "        f = os.path.join(dir, reconstructed_name) \n",
+    "        \n",
+    "        # get month name\n",
+    "        month = calendar.month_name[csv_file]\n",
     "        \n",
     "        # read csv file into dataframe\n",
     "        dfs[month] = pd.read_csv(f)\n",
@@ -91,11 +94,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "original_dir = \"../OriginalData\"\n",
+    "original_dir = \"../../BikeShareData/OriginalData\"\n",
     "data = read_data(original_dir)"
    ]
   },
@@ -109,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +120,7 @@
      "output_type": "stream",
      "text": [
       "11\n",
-      "dict_keys(['October', 'March', 'May', 'August', 'June', 'July', 'April', 'September', 'February', 'January', 'November'])\n"
+      "dict_keys(['January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November'])\n"
      ]
     },
     {
@@ -271,7 +274,7 @@
        "4  41.780531 -87.605970        member  "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +296,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The write_entries method will do the following:\n",
+    "The check_entries method will do the following:\n",
     " * check whether or not to remove duplicates\n",
     " * calculate number of entires in each file\n",
     " * calculate number of columns in each file\n",
@@ -303,11 +306,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def write_entries(file_name, flag):\n",
+    "def check_entries(file_name, flag):\n",
     "    with open(file_name, 'w', newline='') as file:\n",
     "        writer = csv.writer(file)\n",
     "        writer.writerow([\"Month\",\"No Of Entries\",\"No Of Cols\"])\n",
@@ -332,60 +335,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "For October:(537113, 13)\n",
+      "For January:(190301, 13)\n",
+      "For February:(190445, 13)\n",
       "For March:(258678, 13)\n",
+      "For April:(426590, 13)\n",
       "For May:(604827, 13)\n",
-      "For August:(771693, 13)\n",
       "For June:(719618, 13)\n",
       "For July:(767650, 13)\n",
-      "For April:(426590, 13)\n",
+      "For August:(771693, 13)\n",
       "For September:(666371, 13)\n",
-      "For February:(190445, 13)\n",
-      "For January:(190301, 13)\n",
+      "For October:(537113, 13)\n",
       "For November:(362518, 13)\n",
-      "Average number of entries per file: 5495804\n",
-      "Total number of entries across all files: 499618\n"
+      "Average number of entries per file: 499618\n",
+      "Total number of entries across all files: 5495804\n"
      ]
     }
    ],
    "source": [
-    "write_entries(\"entries_initial.csv\", False)"
+    "check_entries(\"Original_BikeRides.csv\", False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "For October:(537113, 13)\n",
+      "For January:(190301, 13)\n",
+      "For February:(190445, 13)\n",
       "For March:(258678, 13)\n",
+      "For April:(426590, 13)\n",
       "For May:(604827, 13)\n",
-      "For August:(771693, 13)\n",
       "For June:(719618, 13)\n",
       "For July:(767650, 13)\n",
-      "For April:(426590, 13)\n",
+      "For August:(771693, 13)\n",
       "For September:(666371, 13)\n",
-      "For February:(190445, 13)\n",
-      "For January:(190301, 13)\n",
+      "For October:(537113, 13)\n",
       "For November:(362518, 13)\n",
-      "Average number of entries per file: 5495804\n",
-      "Total number of entries across all files: 499618\n"
+      "Average number of entries per file: 499618\n",
+      "Total number of entries across all files: 5495804\n"
      ]
     }
    ],
    "source": [
-    "write_entries(\"entries_after_duplicates.csv\", True)"
+    "check_entries(\"BikeRides_without_Duplicates.csv\", True)"
    ]
   },
   {
