--- a/Code/cleaning.ipynb
+++ b/Code/cleaning.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,6 +17,7 @@
     "import shutil # to copy files across directories\n",
     "\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "import csv\n",
     "import calendar"
    ]
@@ -65,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -120,163 +121,28 @@
      "output_type": "stream",
      "text": [
       "11\n",
-      "dict_keys(['January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November'])\n"
+      "dict_keys(['January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November'])\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 604827 entries, 0 to 604826\n",
+      "Data columns (total 13 columns):\n",
+      " #   Column              Non-Null Count   Dtype  \n",
+      "---  ------              --------------   -----  \n",
+      " 0   ride_id             604827 non-null  object \n",
+      " 1   rideable_type       604827 non-null  object \n",
+      " 2   started_at          604827 non-null  object \n",
+      " 3   ended_at            604827 non-null  object \n",
+      " 4   start_station_name  515587 non-null  object \n",
+      " 5   start_station_id    515587 non-null  object \n",
+      " 6   end_station_name    509560 non-null  object \n",
+      " 7   end_station_id      509560 non-null  object \n",
+      " 8   start_lat           604827 non-null  float64\n",
+      " 9   start_lng           604827 non-null  float64\n",
+      " 10  end_lat             604117 non-null  float64\n",
+      " 11  end_lng             604117 non-null  float64\n",
+      " 12  member_casual       604827 non-null  object \n",
+      "dtypes: float64(4), object(9)\n",
+      "memory usage: 60.0+ MB\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ride_id</th>\n",
-       "      <th>rideable_type</th>\n",
-       "      <th>started_at</th>\n",
-       "      <th>ended_at</th>\n",
-       "      <th>start_station_name</th>\n",
-       "      <th>start_station_id</th>\n",
-       "      <th>end_station_name</th>\n",
-       "      <th>end_station_id</th>\n",
-       "      <th>start_lat</th>\n",
-       "      <th>start_lng</th>\n",
-       "      <th>end_lat</th>\n",
-       "      <th>end_lng</th>\n",
-       "      <th>member_casual</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>CBCD0D7777F0E45F</td>\n",
-       "      <td>classic_bike</td>\n",
-       "      <td>2023-02-14 11:59:42</td>\n",
-       "      <td>2023-02-14 12:13:38</td>\n",
-       "      <td>Southport Ave &amp; Clybourn Ave</td>\n",
-       "      <td>TA1309000030</td>\n",
-       "      <td>Clark St &amp; Schiller St</td>\n",
-       "      <td>TA1309000024</td>\n",
-       "      <td>41.920771</td>\n",
-       "      <td>-87.663712</td>\n",
-       "      <td>41.907993</td>\n",
-       "      <td>-87.631501</td>\n",
-       "      <td>casual</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>F3EC5FCE5FF39DE9</td>\n",
-       "      <td>electric_bike</td>\n",
-       "      <td>2023-02-15 13:53:48</td>\n",
-       "      <td>2023-02-15 13:59:08</td>\n",
-       "      <td>Clarendon Ave &amp; Gordon Ter</td>\n",
-       "      <td>13379</td>\n",
-       "      <td>Sheridan Rd &amp; Lawrence Ave</td>\n",
-       "      <td>TA1309000041</td>\n",
-       "      <td>41.957879</td>\n",
-       "      <td>-87.649584</td>\n",
-       "      <td>41.969517</td>\n",
-       "      <td>-87.654691</td>\n",
-       "      <td>casual</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>E54C1F27FA9354FF</td>\n",
-       "      <td>classic_bike</td>\n",
-       "      <td>2023-02-19 11:10:57</td>\n",
-       "      <td>2023-02-19 11:35:01</td>\n",
-       "      <td>Southport Ave &amp; Clybourn Ave</td>\n",
-       "      <td>TA1309000030</td>\n",
-       "      <td>Aberdeen St &amp; Monroe St</td>\n",
-       "      <td>13156</td>\n",
-       "      <td>41.920771</td>\n",
-       "      <td>-87.663712</td>\n",
-       "      <td>41.880419</td>\n",
-       "      <td>-87.655519</td>\n",
-       "      <td>member</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3D561E04F739CC45</td>\n",
-       "      <td>electric_bike</td>\n",
-       "      <td>2023-02-26 16:12:05</td>\n",
-       "      <td>2023-02-26 16:39:55</td>\n",
-       "      <td>Southport Ave &amp; Clybourn Ave</td>\n",
-       "      <td>TA1309000030</td>\n",
-       "      <td>Franklin St &amp; Adams St (Temp)</td>\n",
-       "      <td>TA1309000008</td>\n",
-       "      <td>41.920873</td>\n",
-       "      <td>-87.663733</td>\n",
-       "      <td>41.879434</td>\n",
-       "      <td>-87.635504</td>\n",
-       "      <td>member</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0CB4B4D53B2DBE05</td>\n",
-       "      <td>electric_bike</td>\n",
-       "      <td>2023-02-20 11:55:23</td>\n",
-       "      <td>2023-02-20 12:05:48</td>\n",
-       "      <td>Prairie Ave &amp; Garfield Blvd</td>\n",
-       "      <td>TA1307000160</td>\n",
-       "      <td>Cottage Grove Ave &amp; 63rd St</td>\n",
-       "      <td>KA1503000054</td>\n",
-       "      <td>41.794827</td>\n",
-       "      <td>-87.618795</td>\n",
-       "      <td>41.780531</td>\n",
-       "      <td>-87.605970</td>\n",
-       "      <td>member</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            ride_id  rideable_type           started_at             ended_at  \\\n",
-       "0  CBCD0D7777F0E45F   classic_bike  2023-02-14 11:59:42  2023-02-14 12:13:38   \n",
-       "1  F3EC5FCE5FF39DE9  electric_bike  2023-02-15 13:53:48  2023-02-15 13:59:08   \n",
-       "2  E54C1F27FA9354FF   classic_bike  2023-02-19 11:10:57  2023-02-19 11:35:01   \n",
-       "3  3D561E04F739CC45  electric_bike  2023-02-26 16:12:05  2023-02-26 16:39:55   \n",
-       "4  0CB4B4D53B2DBE05  electric_bike  2023-02-20 11:55:23  2023-02-20 12:05:48   \n",
-       "\n",
-       "             start_station_name start_station_id  \\\n",
-       "0  Southport Ave & Clybourn Ave     TA1309000030   \n",
-       "1    Clarendon Ave & Gordon Ter            13379   \n",
-       "2  Southport Ave & Clybourn Ave     TA1309000030   \n",
-       "3  Southport Ave & Clybourn Ave     TA1309000030   \n",
-       "4   Prairie Ave & Garfield Blvd     TA1307000160   \n",
-       "\n",
-       "                end_station_name end_station_id  start_lat  start_lng  \\\n",
-       "0         Clark St & Schiller St   TA1309000024  41.920771 -87.663712   \n",
-       "1     Sheridan Rd & Lawrence Ave   TA1309000041  41.957879 -87.649584   \n",
-       "2        Aberdeen St & Monroe St          13156  41.920771 -87.663712   \n",
-       "3  Franklin St & Adams St (Temp)   TA1309000008  41.920873 -87.663733   \n",
-       "4    Cottage Grove Ave & 63rd St   KA1503000054  41.794827 -87.618795   \n",
-       "\n",
-       "     end_lat    end_lng member_casual  \n",
-       "0  41.907993 -87.631501        casual  \n",
-       "1  41.969517 -87.654691        casual  \n",
-       "2  41.880419 -87.655519        member  \n",
-       "3  41.879434 -87.635504        member  \n",
-       "4  41.780531 -87.605970        member  "
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -285,10 +151,17 @@
     "print(no_of_files)\n",
     "month_names = data.keys()\n",
     "print(month_names)\n",
-    "#data[\"January\"].head()\n",
-    "data[\"February\"].head()\n",
-    "#data[\"April\"].head()\n",
-    "#data[\"November\"].head()"
+    "#data[\"January\"]\n",
+    "#data[\"February\"]\n",
+    "#data[\"March\"]\n",
+    "#data[\"April\"]\n",
+    "data[\"May\"].info()\n",
+    "#data[\"June\"]\n",
+    "#data[\"July\"]\n",
+    "#data[\"August\"]\n",
+    "#data[\"September\"]\n",
+    "#data[\"October\"]\n",
+    "#data[\"November\"]"
    ]
   },
   {
@@ -306,11 +179,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def check_entries(file_name, flag):\n",
+    "def count_entries(file_name, flag):\n",
     "    with open(file_name, 'w', newline='') as file:\n",
     "        writer = csv.writer(file)\n",
     "        writer.writerow([\"Month\",\"No Of Entries\",\"No Of Cols\"])\n",
@@ -319,7 +192,7 @@
     "\n",
     "        for month, df in data.items():\n",
     "            if flag:\n",
-    "                df.drop_duplicates()\n",
+    "                df = df.drop_duplicates()\n",
     "                \n",
     "            entries = len(df)\n",
     "            writer.writerow([month, entries,len(df.columns)])\n",
@@ -335,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -359,12 +232,12 @@
     }
    ],
    "source": [
-    "check_entries(\"Original_BikeRides.csv\", False)"
+    "count_entries(\"Original_BikeRides.csv\", False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +261,7 @@
     }
    ],
    "source": [
-    "check_entries(\"BikeRides_without_Duplicates.csv\", True)"
+    "count_entries(\"BikeRides_without_Duplicates.csv\", True)"
    ]
   },
   {
@@ -397,6 +270,110 @@
    "metadata": {},
    "source": [
     "From the above print out, it is clear that all the files have the same number of columns. So that is a good preliminary check on the consistency of the data across the files. And we can see that in total we have 5.5 Million entries, with an average of 500000 entries per month. All calculated numbers before and after removing duplicates are identical, so the original dataset did not have any duplicates."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next we will look at the percentage of nulls across the columns:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def check_NAN():\n",
+    "    with open(\"NaN_Percentages.csv\", 'w', newline='') as file:\n",
+    "        writer = csv.writer(file)\n",
+    "\n",
+    "        for month, df in data.items():\n",
+    "            #df.drop(columns = \"name of column\", inplace=True) # drop column\n",
+    "            #df.fillna('') # fill NaN\n",
+    "            #df.dropnna(subset = \"Column Name\", inplace=True) # drop rows where column_name has NaN\n",
+    "\n",
+    "            if month == 'January':\n",
+    "                column_names = df.columns.insert(0, \"Month\")\n",
+    "                #print(column_names)\n",
+    "                writer.writerow(column_names)\n",
+    "            \n",
+    "            percentage = df.isna().sum()*100/len(df)\n",
+    "            #y = percentage.apply(lambda x: str(int(x))+\"%\" if x > 1 else 0).values\n",
+    "            y = percentage.apply(lambda x: str(int(x))+\"%\" if x > 1 else (\"< 1%\" if x > 0 else 0)).values\n",
+    "            values = np.insert(y, 0, month)\n",
+    "            print(values)\n",
+    "            writer.writerow(values)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['January' 0 0 0 0 '14%' '14%' '14%' '14%' 0 0 '< 1%' '< 1%' 0]\n",
+      "['February' 0 0 0 0 '13%' '13%' '14%' '14%' 0 0 '< 1%' '< 1%' 0]\n",
+      "['March' 0 0 0 0 '13%' '13%' '14%' '14%' 0 0 '< 1%' '< 1%' 0]\n",
+      "['April' 0 0 0 0 '14%' '14%' '16%' '16%' 0 0 '< 1%' '< 1%' 0]\n",
+      "['May' 0 0 0 0 '14%' '14%' '15%' '15%' 0 0 '< 1%' '< 1%' 0]\n",
+      "['June' 0 0 0 0 '16%' '16%' '17%' '17%' 0 0 '< 1%' '< 1%' 0]\n",
+      "['July' 0 0 0 0 '16%' '16%' '16%' '16%' 0 0 '< 1%' '< 1%' 0]\n",
+      "['August' 0 0 0 0 '15%' '15%' '16%' '16%' 0 0 '< 1%' '< 1%' 0]\n",
+      "['September' 0 0 0 0 '15%' '15%' '16%' '16%' 0 0 '< 1%' '< 1%' 0]\n",
+      "['October' 0 0 0 0 '15%' '15%' '16%' '16%' 0 0 '< 1%' '< 1%' 0]\n",
+      "['November' 0 0 0 0 '15%' '15%' '15%' '15%' 0 0 '< 1%' '< 1%' 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "check_NAN()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What are the unique values in each column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ride_id               190301\n",
+       "rideable_type              3\n",
+       "started_at            178872\n",
+       "ended_at              179025\n",
+       "start_station_name       964\n",
+       "start_station_id         944\n",
+       "end_station_name         962\n",
+       "end_station_id           942\n",
+       "start_lat              63345\n",
+       "start_lng              63144\n",
+       "end_lat                  852\n",
+       "end_lng                  839\n",
+       "member_casual              2\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['January'].nunique()"
    ]
   },
   {
@@ -425,7 +402,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.8"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "38cca0c38332a56087b24af0bc80247f4fced29cb4f7f437d91dc159adec9c4e"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
