--- a/Code/cleaning.ipynb
+++ b/Code/cleaning.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,12 +108,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we can see the number of data files (a check that all eleven months were read into the dictionary), and names of the months. We can also take a look at the first 5 entries for a couple of months:"
+    "Here we can see:\n",
+    "* the number of data files \n",
+    "* the names of the months (a check that all eleven months were read into the dictionary)\n",
+    "* the first and last 5 entries for a couple of months\n",
+    "* the number of unique values in May\n",
+    "* unique values for specific columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -122,26 +127,23 @@
      "text": [
       "11\n",
       "dict_keys(['January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November'])\n",
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 604827 entries, 0 to 604826\n",
-      "Data columns (total 13 columns):\n",
-      " #   Column              Non-Null Count   Dtype  \n",
-      "---  ------              --------------   -----  \n",
-      " 0   ride_id             604827 non-null  object \n",
-      " 1   rideable_type       604827 non-null  object \n",
-      " 2   started_at          604827 non-null  object \n",
-      " 3   ended_at            604827 non-null  object \n",
-      " 4   start_station_name  515587 non-null  object \n",
-      " 5   start_station_id    515587 non-null  object \n",
-      " 6   end_station_name    509560 non-null  object \n",
-      " 7   end_station_id      509560 non-null  object \n",
-      " 8   start_lat           604827 non-null  float64\n",
-      " 9   start_lng           604827 non-null  float64\n",
-      " 10  end_lat             604117 non-null  float64\n",
-      " 11  end_lng             604117 non-null  float64\n",
-      " 12  member_casual       604827 non-null  object \n",
-      "dtypes: float64(4), object(9)\n",
-      "memory usage: 60.0+ MB\n"
+      "Column Name:          NUnique\n",
+      "ride_id               604827\n",
+      "rideable_type              3\n",
+      "started_at            503683\n",
+      "ended_at              505259\n",
+      "start_station_name      1287\n",
+      "start_station_id        1250\n",
+      "end_station_name        1254\n",
+      "end_station_id          1210\n",
+      "start_lat             188591\n",
+      "start_lng             185410\n",
+      "end_lat                 4759\n",
+      "end_lng                 4762\n",
+      "member_casual              2\n",
+      "dtype: int64\n",
+      "['electric_bike' 'classic_bike' 'docked_bike']\n",
+      "['member' 'casual']\n"
      ]
     }
    ],
@@ -155,13 +157,18 @@
     "#data[\"February\"]\n",
     "#data[\"March\"]\n",
     "#data[\"April\"]\n",
-    "data[\"May\"].info()\n",
+    "#data[\"May\"].info()\n",
     "#data[\"June\"]\n",
     "#data[\"July\"]\n",
     "#data[\"August\"]\n",
     "#data[\"September\"]\n",
     "#data[\"October\"]\n",
-    "#data[\"November\"]"
+    "#data[\"November\"]\n",
+    "\n",
+    "print(\"Column Name:          NUnique\")\n",
+    "print(data['May'].nunique())\n",
+    "print(data['May'].rideable_type.unique())\n",
+    "print(data['May'].member_casual.unique())"
    ]
   },
   {
@@ -169,7 +176,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The check_entries method will do the following:\n",
+    "The count_entries method will do the following:\n",
     " * check whether or not to remove duplicates\n",
     " * calculate number of entires in each file\n",
     " * calculate number of columns in each file\n",
@@ -179,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,10 +298,6 @@
     "        writer = csv.writer(file)\n",
     "\n",
     "        for month, df in data.items():\n",
-    "            #df.drop(columns = \"name of column\", inplace=True) # drop column\n",
-    "            #df.fillna('') # fill NaN\n",
-    "            #df.dropnna(subset = \"Column Name\", inplace=True) # drop rows where column_name has NaN\n",
-    "\n",
     "            if month == 'January':\n",
     "                column_names = df.columns.insert(0, \"Month\")\n",
     "                #print(column_names)\n",
@@ -340,40 +343,76 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What are the unique values in each column"
+    "Drop the columns with NAN values:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def drops_NANs(dataframe):\n",
+    "    col_to_drop = ['start_station_name', 'start_station_id', 'end_station_name', 'end_station_id', 'start_lat', 'start_lng', 'end_lat', 'end_lng']\n",
+    "\n",
+    "    for _, df in dataframe.items():\n",
+    "        #print(\"shape before\",df.shape)\n",
+    "        df.drop(columns = col_to_drop, inplace=True) # drop column\n",
+    "        #print(\"shape after\",df.shape)\n",
+    "        #df.fillna('') # fill NaN\n",
+    "        #df.dropnna(subset = \"Column Name\", inplace=True) # drop rows where column_name has NaN\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "ride_id               190301\n",
-       "rideable_type              3\n",
-       "started_at            178872\n",
-       "ended_at              179025\n",
-       "start_station_name       964\n",
-       "start_station_id         944\n",
-       "end_station_name         962\n",
-       "end_station_id           942\n",
-       "start_lat              63345\n",
-       "start_lng              63144\n",
-       "end_lat                  852\n",
-       "end_lng                  839\n",
-       "member_casual              2\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 106,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(190301, 5), (190445, 5), (258678, 5), (426590, 5), (604827, 5), (719618, 5), (767650, 5), (771693, 5), (666371, 5), (537113, 5), (362518, 5)]\n"
+     ]
     }
    ],
    "source": [
-    "data['January'].nunique()"
+    "#num = [df.shape for _,df in data.items()]\n",
+    "#print(num)\n",
+    "#data = read_data(original_dir)\n",
+    "drops_NANs(data)\n",
+    "num = [df.shape for _,df in data.items()]\n",
+    "print(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For January:(190301, 5)\n",
+      "For February:(190445, 5)\n",
+      "For March:(258678, 5)\n",
+      "For April:(426590, 5)\n",
+      "For May:(604827, 5)\n",
+      "For June:(719618, 5)\n",
+      "For July:(767650, 5)\n",
+      "For August:(771693, 5)\n",
+      "For September:(666371, 5)\n",
+      "For October:(537113, 5)\n",
+      "For November:(362518, 5)\n",
+      "Average number of entries per file: 499618\n",
+      "Total number of entries across all files: 5495804\n"
+     ]
+    }
+   ],
+   "source": [
+    "count_entries(\"BikeRides_NaNsRemoved.csv\", False)"
    ]
   },
   {
